--- a/templates/diploma_forml2v7.html
+++ b/templates/diploma_forml2v7.html
@@ -331,7 +331,7 @@
             <p class="field corso-laurea">{{ corsolau | safe }}</p>
             <p class="field classe-laurea">{{ indicorso }} </p>
             {% if classe %} <!--ATTENZIONE POTREBBERO SCAMBIARSI INDICORSO E CLASSE-->
-                <p class="field classe-laurea">{{ classe }}</p>
+                <p class="field classe-laurea">{{ classe }} (DM 509/1999)</p>
             {% endif %}
 
             {% if lode == 'LODE' %}
